tests/lean/bad_open.lean.expected.out
bad_open.lean:1:5: error: invalid 'open/export' command, identifier expected
bad_open.lean:3:15: error: invalid 'open/export' command, identifier expected
