tests/lean/bad_open.lean
open "nat"

open [classes] "nat"
